# pytest-deepcov

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Exchange.tsx  README.md  package.json  tsconfig.json
.github/workflows/: publish-to-pypi.yml  publish.yml  test-publish-to-pypi.yml  test.yml
python/: pyproject.toml
python-cli/: .gitignore  pyproject.toml  pyrightconfig.json
python-cli/src/deepcov/: cli.py  pytest_plugin.py
python-cli/src/deeptest/: cli.py  pytest_plugin.py
python-cli/tests/: test_cli.py  test_pytest_plugin.py  util.py
python-cli/tests/resources/: .coveragerc  pytest.ini
python-cli/tests/resources/src/: lib.py  test_lib.py
python-cli/tests/snapshots/: snap_test_cli.py
python/src/deeptest/: cli.py
python/tests/: Untitled.json  test_cli.py
server/: .gitignore  README.md  ormconfig.json  package.json
server/src/: cli.ts  index.ts
src/: extension.ts
src/test/: runTest.ts
src/test/suite/: index.ts
ui/: .gitignore  package.json  schema.json  tsconfig.json
ui/public/: index.html
ui/src/: index.tsx
ui/src/app/: App.test.tsx  App.tsx  Constants.ts  Header.tsx  NodeViewer.tsx  common.ts  lib.test.ts  lib.ts
ui/src/types/: GetBooks.ts  GetNodes.ts
vscode/: README.md
vscode/deeptest/: CHANGELOG.md  README.md
vscode/deeptest/src/: extension.ts
