[tool.poetry]
name = "deeptest"
version = "0.0.0"
license = "Apache-2.0"
homepage = "https://github.com/treebeardtech/deeptest"
description = ""
authors = ["alex-treebeard <alex@treebeard.io>"]
packages = [
  {include = "deeptest", from = "src"},
]

[tool.poetry.scripts]
deeptest = 'deeptest.cli:run'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
twine = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
